fix jump

--- a/src/StartPage.css
+++ b/src/StartPage.css
@@ -98,7 +98,7 @@
 }
 
 .viking-animation-container.viking-jumping {
-  animation: jumpLeft 0.6s ease-in-out;
+  animation: jumpLeft 0.8s ease-in-out;
   animation-fill-mode: forwards;
 }
 
@@ -186,7 +186,7 @@
     transform: translateY(0) translateX(0);
   }
   50% {
-    transform: translateY(-30px) translateX(0);
+    transform: translateY(-225px) translateX(0);
   }
 }
 
@@ -362,7 +362,7 @@
       transform: translateY(0) translateX(0);
     }
     50% {
-      transform: translateY(-20px) translateX(0);
+      transform: translateY(-225px) translateX(0);
     }
   }
 }
